# simsound

./: README.md  app.py  pyproject.toml
simsound/: grid.py  intersections.py  ray.py
tests/: intersections_tests.py
