[project]
name = "simsound"
version = "0.1.0"
description = ""
authors = [
    {name = "frederic.vogels@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "sounddevice (>=0.5.1,<0.6.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "pygame-ce (>=2.5.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.pytest.ini_options]
python_files = ["*_tests.py"]